Add a database request listener for citation key updates